# ising1d

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
